[BED-23] Change block names to display correctly when selected